# fizzy

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: file_config.rs  main.rs
